--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "firebase": "^11.8.1",
+    "mammoth": "^1.9.1",
+    "pdfjs-dist": "^4.8.69",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-dropzone": "^14.3.8"
+    "react-dropzone": "^14.3.8",
+    "react-pdf": "^9.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
